Register user functionality

--- a/App/templates/App/register.html
+++ b/App/templates/App/register.html
@@ -11,9 +11,11 @@
         <label for="email">Email:</label><br>
         <input type="text" id="email" name="email"><br>
         <label for="passwd">Password:</label><br>
-        <input type="text" id="passwd" name="passwd"><br><br>
+        <input type="text" id="passwd" name="passwd"><br>
+        <label for="repasswd">Renter password:</label><br>
+        <input type="text" id="repasswd" name="repasswd"><br><br>
         <input type="submit" value="Submit">
     </form>
-    <a href="{% url 'signup' %}">Sign Up</a>
+    <a href="{% url 'sigin' %}">Sign In</a>
 </body>
 </html>
