--- a/App/templates/App/home.html
+++ b/App/templates/App/home.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Placemet Freak - SFIT</title>
+    <style>
+        img {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+    </style>
 </head>
 <body>
     {% for year in data %}
         <a href="{% url 'company' year.name %}">{{ year.name }}</a>
     {% endfor %}
     <a href="{% url 'logout' %}">Logout</a>
+    <img src="https://robohash.org/{{ request.user.username }}.png">
+    <span>Hello {{ request.user.username }}</span>
 </body>
 </html>
