--- a/App/templates/App/home.html
+++ b/App/templates/App/home.html
@@ -1,3 +1,5 @@
+{% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +20,8 @@
         <a href="{% url 'company' year.name %}">{{ year.name }}</a>
     {% endfor %}
     <a href="{% url 'logout' %}">Logout</a>
-    <img src="https://robohash.org/{{ request.user.username }}.png">
+    <img src="{{ request.user.profile.url }}">
+    <p>{{ request.user.id }}</p>
     <span>Hello {{ request.user.username }}</span>
 </body>
 </html>
