--- a/App/templates/App/login.html
+++ b/App/templates/App/login.html
@@ -1,8 +1,11 @@
+{% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'pl.ico' %}">
     <title>Placemet Freak - SFIT</title>
 </head>
 <body>
