Experience Verification Added

--- a/App/templates/App/experience.html
+++ b/App/templates/App/experience.html
@@ -5,21 +5,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'pl.ico' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ favicon_path }}">
     <title>Placemet Freak - SFIT</title>
 </head>
 <body>
     {% for exp in data %}
-        <p>{{ exp.user.username }}</p>
-        <p>{{ exp.company.name }}</p>
-        <p>{{ exp.batch.name }}</p>
-        <p>{{ exp.message}}</p>
-        <p>Selected : {{ exp.selected }}</p>
-        <p>Difficulty : {{ exp.difficulty }}</p>
-        {% if exp.package %}
-        <p>Package : {{ exp.package }}</p>
+        {% if exp.verified == condition %}
+            <p>{{ exp.id }}</p>
+            <p>{{ exp.user.username }}</p>
+            <p>{{ exp.company.name }}</p>
+            <p>{{ exp.batch.name }}</p>
+            <p>{{ exp.message}}</p>
+            <p>Selected : {{ exp.selected }}</p>
+            <p>Difficulty : {{ exp.difficulty }}</p>
+            {% if exp.package %}
+            <p>Package : {{ exp.package }}</p>
+            {% endif %}
+            {% if condition == 'No' %}
+                <a href="{% url 'verification' exp.id %}">Verify</a>
+            {% endif %}
+            <br>
         {% endif %}
-        <br>
     {% endfor %}
 </body>
 </html>
