Added this CRUD

--- a/App/templates/App/home.html
+++ b/App/templates/App/home.html
@@ -20,6 +20,8 @@
     {% for comp in data %}
         <a href="{% url 'company' comp.name %}">{{ comp.name }}</a>
     {% endfor %}
+    <a href="{% url 'exp_add' %}">Add</a>
+    
     <a href="{% url 'logout' %}">Logout</a>
     <br>
     <img src="{{ request.user.profile.url }}">
